# global_rackspace_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  tester.cpp
cmake/: dependencies.cmake
src/: LibMain.cpp  LibMain.h
src/Controller/: Controller.cpp  Controller.h  GigPerformerUtilities.cpp  GigPerformerUtilities.h  KeyboardSubController.cpp  KeyboardSubController.h  MixerController.cpp  MixerController.h  MixerSubController.cpp  MixerSubController.h  OrganController.cpp  OrganController.h  OrganSubController.cpp  OrganSubController.h  SubController.cpp  SubController.h  SubControllers.cpp  SubControllers.h  WindowSubController.cpp  WindowSubController.h
src/Framework/: MvcFramework.cpp  MvcFramework.h
src/Midi/: MidiMessage.cpp  MidiMessage.h
src/MidiInBlocks/: AudioToCcMidiInBlock.cpp  AudioToCcMidiInBlock.h  FootBoardMidiInBlock.cpp  FootBoardMidiInBlock.h  MidiInBlock.cpp  MidiInBlock.h  MidiInBlocks.cpp  MidiInBlocks.h  OrganPrimaryKeyboardMidiInBlock.h  PrimaryKeyboardMidiInBlock.cpp  PrimaryKeyboardMidiInBlock.h  SecondaryKeyboardMidiInBlock.cpp  SecondaryKeyboardMidiInBlock.h
src/MidiInBlocksForOutput/: OrganMidiInBlock.cpp  OrganMidiInBlock.h
src/MidiInForOutputBlocks/: MidiInForOutputBlock.cpp  MidiInForOutputBlock.h  MidiInForOutputBlocks.cpp  MidiInForOutputBlocks.h  OrganMidiInForOutputBlock.cpp  OrganMidiInForOutputBlock.h
src/Model/: KeyboardSubModel.cpp  KeyboardSubModel.h  Mixer.cpp  Mixer.h  MixerChannel.cpp  MixerChannel.h  MixerChannelSubModel.cpp  MixerChannelSubModel.h  MixerSubModel.cpp  MixerSubModel.h  Model.cpp  Model.h  Organ.cpp  Organ.h  OrganSubModel.cpp  OrganSubModel.h  SubModel.cpp  SubModel.h  SubModels.cpp  SubModels.h
src/Model/Serialization/: SongReader.h  SongWriter.h
src/Plugins/: AudioMixerPlugin.cpp  AudioMixerPlugin.h  AudioToCcPlugin.cpp  AudioToCcPlugin.h  ExpressionAudioMixerPlugin.cpp  ExpressionAudioMixerPlugin.h  GainAndBalanceControlPlugin.cpp  GainAndBalanceControlPlugin.h  KeyboardPlugin.cpp  KeyboardPlugin.h  OrganPlugin.cpp  OrganPlugin.h  Plugin.cpp  Plugin.h  Plugins.cpp  Plugins.h
src/Utilities/: ArrayUtilities.cpp  ArrayUtilities.h  BoolUtilities.cpp  BoolUtilities.h  ColorUtilities.cpp  ColorUtilities.h  Debug.cpp  Debug.h  DoubleUtilities.cpp  DoubleUtilities.h  IObserver.h  IntUtilities.cpp  IntUtilities.h  MidiUtilities.cpp  MidiUtilities.h  Observable.h  SerializationUtilities.cpp  SerializationUtilities.h  SerializerUtilities.cpp  SerializerUtilities.h  StringUtilities.cpp  StringUtilities.h  VectorUtilities.cpp  VectorUtilities.h  VersionUtilities.cpp  VersionUtilities.h
src/View/: ChangedProperties.cpp  ChangedProperties.h  ChannelsSetupSubView.cpp  ChannelsSetupSubView.h  IObserver.h  LiveSubView.cpp  LiveSubView.h  Observable.h  PluginsSetupSubView.cpp  PluginsSetupSubView.h  SetupSubView.cpp  SetupSubView.h  SubView.cpp  SubView.h  SubViews.cpp  SubViews.h  View.cpp  View.h
src/View/Panes/: ChannelsSetupPane.cpp  ChannelsSetupPane.h  ClockTimerPane.cpp  FootBoardPane.cpp  FootBoardPane.h  MiniMixerPane.cpp  OrganPane.cpp  OrganPane.h  OrganSetupPane.cpp  OrganSetupPane.h  Pane.cpp  Pane.h  Panes.cpp  Panes.h  PrimaryKeyboardButtonsPane.cpp  PrimaryKeyboardButtonsPane.h  SlidersPane.cpp  SlidersPane.h
src/Widgets/: ButtonWidget.cpp  ButtonWidget.h  ShapeWidget.cpp  ShapeWidget.h  TextWidget.cpp  TextWidget.h  ValueWidget.cpp  ValueWidget.h  Widget.cpp  Widget.h  WidgetIds.cpp  WidgetIds.h  Widgets.cpp  Widgets.h  WidgetsListener.cpp  WidgetsListener.h
